--- a/_posts/2019-11-11-css-flex.md
+++ b/_posts/2019-11-11-css-flex.md
@@ -5,11 +5,13 @@ date: 2019-11-11
 categories: 前端
 tags: CSS
 ---
-网页布局（layout）是 CSS 的一个重点应用。
+本文介绍CSS Flex布局。
 
 本文转自[http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html](http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html)
 
 本文转自[http://www.ruanyifeng.com/blog/2015/07/flex-examples.html](http://www.ruanyifeng.com/blog/2015/07/flex-examples.html)
+
+网页布局（layout）是 CSS 的一个重点应用。
 
 ![](../flex1.gif)
 
