--- a/_posts/2019-11-15-css-grid.md
+++ b/_posts/2019-11-15-css-grid.md
@@ -9,7 +9,7 @@ tags: CSS
 
 本文转自[http://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html](http://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html)
 
-### 一、概述
+## 一、概述
 网格布局（Grid）是最强大的 CSS 布局方案。
 
 它将网页划分成一个个网格，可以任意组合不同的网格，做出各种各样的布局。以前，只能通过复杂的 CSS 框架达到的效果，现在浏览器内置了。
@@ -22,9 +22,9 @@ Grid 布局与 Flex 布局有一定的相似性，都可以指定容器内部多
 
 Flex 布局是轴线布局，只能指定“项目”针对轴线的位置，可以看作是一维布局。Grid 布局则是将容器划分成“行”和“列”，产生单元格，然后指定“项目所在”的单元格，可以看作是二维布局。Grid 布局远比 Flex 布局强大。
 
-### 二、基本概念
+## 二、基本概念
 
-#### 2.1 容器和项目
+### 2.1 容器和项目
 
 采用网格布局的区域，称为“容器”（container）。容器内部采用网格定位的子元素，称为“项目”（item）。
 
@@ -39,7 +39,7 @@ Flex 布局是轴线布局，只能指定“项目”针对轴线的位置，可
 
 注意：项目只能是容器的顶层子元素，不包含项目的子元素，比如上面代码的`<p>`元素就不是项目。Grid 布局只对项目生效。
 
-#### 2.2 行和列
+### 2.2 行和列
 
 容器里面的水平区域称为“行”（row），垂直区域称为“列”（column）。
 
@@ -47,13 +47,13 @@ Flex 布局是轴线布局，只能指定“项目”针对轴线的位置，可
 
 上图中，水平的深色区域就是“行”，垂直的深色区域就是“列”。
 
-#### 2.3 单元格
+### 2.3 单元格
 
 行和列的交叉区域，称为“单元格”（cell）。
 
 正常情况下，n行和m列会产生n × m个单元格。比如，3行3列会产生9个单元格。
 
-#### 2.4 网格线
+### 2.4 网格线
 
 划分网格的线，称为“网格线”（grid line）。水平网格线划分出行，垂直网格线划分出列。
 
@@ -63,10 +63,10 @@ Flex 布局是轴线布局，只能指定“项目”针对轴线的位置，可
 
 上图是一个 4 x 4 的网格，共有5根水平网格线和5根垂直网格线。
 
-### 三、容器属性
+## 三、容器属性
 Grid 布局的属性分成两类。一类定义在容器上面，称为容器属性；另一类定义在项目上面，称为项目属性。这部分先介绍容器属性。
 
-#### 3.1 display 属性
+### 3.1 display 属性
 
 `display: grid`指定一个容器采用网格布局。
 
@@ -96,7 +96,7 @@ div {
 
 注意，设为网格布局以后，容器子元素（项目）的**float**、**display: inline-block**、**display: table-cell**、**vertical-align**和**column-***等设置都将失效。
 
-#### 3.2 grid-template-columns、grid-template-rows 属性
+### 3.2 grid-template-columns、grid-template-rows 属性
 
 容器指定了网格布局以后，接着就要划分行和列。**grid-template-columns**属性定义每一列的列宽，**grid-template-rows**属性定义每一行的行高。
 
@@ -122,7 +122,7 @@ div {
 }
 ```
 
-##### (1) repeat()函数
+#### (1) repeat()函数
 
 有时候，重复写同样的值非常麻烦，尤其网格很多时。这时，可以使用`repeat()`函数，简化重复的值。上面的代码用`repeat()`改写如下。
 
@@ -146,7 +146,7 @@ grid-template-columns: repeat(2, 100px 20px 80px);
 
 ![](../grid7.png)
 
-##### (2) auto-fill 关键字
+#### (2) auto-fill 关键字
 
 有时，单元格的大小是固定的，但是容器的大小不确定。如果希望每一行（或每一列）容纳尽可能多的单元格，这时可以使用**auto-fill**关键字表示自动填充。
 
@@ -160,7 +160,7 @@ grid-template-columns: repeat(2, 100px 20px 80px);
 
 ![](../grid8.png)
 
-##### (3) fr 关键字
+#### (3) fr 关键字
 
 为了方便表示比例关系，网格布局提供了**fr**关键字（fraction 的缩写，意为“片段”）。如果两列的宽度分别为**1fr**和**2fr**，就表示后者是前者的两倍。
 
@@ -188,7 +188,7 @@ grid-template-columns: repeat(2, 100px 20px 80px);
 
 ![](../grid10.png)
 
-##### (4) minmax()函数
+#### (4) minmax()函数
 
 `minmax()`函数产生一个长度范围，表示长度就在这个范围之中。它接受两个参数，分别为最小值和最大值。
 
@@ -199,7 +199,7 @@ grid-template-columns: 1fr 1fr minmax(100px, 1fr);
 
 上面代码中，`minmax(100px, 1fr)`表示列宽不小于**100px**，不大于**1fr**。
 
-##### (5) auto 关键字
+#### (5) auto 关键字
 
 **auto**关键字表示由浏览器自己决定长度。
 
@@ -209,7 +209,7 @@ grid-template-columns: 100px auto 100px;
 
 上面代码中，第二列的宽度，基本上等于该列单元格的最大宽度，除非单元格内容设置了**min-width**，且这个值大于最大宽度。
 
-##### (6) 网格线的名称
+#### (6) 网格线的名称
 
 **grid-template-columns**属性和**grid-template-rows**属性里面，还可以使用方括号，指定每一根网格线的名字，方便以后的引用。
 
@@ -225,7 +225,7 @@ grid-template-columns: 100px auto 100px;
 
 网格布局允许同一根线有多个名字，比如`[fifth-line row-5]`。
 
-##### (7) 布局实例
+#### (7) 布局实例
 
 **grid-template-columns**属性对于网页布局非常有用。两栏式布局只需要一行代码。
 
@@ -277,7 +277,7 @@ grid-gap: <grid-row-gap> <grid-column-gap>;
 
 根据最新标准，上面三个属性名的**grid-**前缀已经删除，**grid-column-gap**和**grid-row-gap**写成**column-gap**和**row-gap**，**grid-gap**写成**gap**。
 
-#### 3.4  grid-template-areas 属性
+### 3.4  grid-template-areas 属性
 
 网格布局允许指定“区域”（area），一个区域由单个或多个单元格组成。**grid-template-areas**属性用于定义区域。
 
@@ -328,7 +328,7 @@ grid-template-areas: 'a . c'
 
 比如，区域名为**header**，则起始位置的水平网格线和垂直网格线叫做**header-start**，终止位置的水平网格线和垂直网格线叫做**header-end**。
 
-#### 3.5 grid-auto-flow 属性
+### 3.5 grid-auto-flow 属性
 
 划分网格以后，容器的子元素会按照顺序，自动放置在每一个网格。默认的放置顺序是“先行后列”，即先填满第一行，再开始放入第二行，即下图数字的顺序。
 
@@ -376,7 +376,7 @@ grid-auto-flow: column dense;
 
 上图会先填满第一列，再填满第2列，所以3号项目在第一列，4号项目在第二列。8号项目和9号项目被挤到了第四列。
 
-#### 3.6 justify-items、align-items、place-items 属性
+### 3.6 justify-items、align-items、place-items 属性
 
 **justify-items**属性设置单元格内容的水平位置（左中右），**align-items**属性设置单元格内容的垂直位置（上中下）。
 
@@ -426,7 +426,7 @@ place-items: start end;
 
 如果省略第二个值，则浏览器认为与第一个值相等。
 
-#### 3.7 justify-content、align-content、place-content 属性
+### 3.7 justify-content、align-content、place-content 属性
 
 **justify-content**属性是整个内容区域在容器里面的水平位置（左中右），**align-content**属性是整个内容区域的垂直位置（上中下）。
 
@@ -481,7 +481,7 @@ place-content: space-around space-evenly;
 
 如果省略第二个值，浏览器就会假定第二个值等于第一个值。
 
-#### 3.8 grid-auto-columns、grid-auto-rows 属性
+### 3.8 grid-auto-columns、grid-auto-rows 属性
 
 有时候，一些项目的指定位置，在现有网格的外部。比如网格只有3列，但是某一个项目指定在第5行。这时，浏览器会自动生成多余的网格，以便放置项目。
 
@@ -502,7 +502,7 @@ place-content: space-around space-evenly;
 
 ![](../grid26.png)
 
-#### 3.9 grid-template、grid 属性
+### 3.9 grid-template、grid 属性
 
 **grid-template**属性是**grid-template-columns**、**grid-template-rows**和**grid-template-areas**这三个属性的合并简写形式。
 
@@ -510,9 +510,9 @@ place-content: space-around space-evenly;
 
 从易读易写的角度考虑，还是建议不要合并属性，所以这里就不详细介绍这两个属性了。
 
-### 四、项目属性
+## 四、项目属性
 
-#### 4.1 grid-column-start、grid-column-end、grid-row-start、grid-row-end 属性
+### 4.1 grid-column-start、grid-column-end、grid-row-start、grid-row-end 属性
 
 项目的位置是可以指定的，具体方法就是指定项目的四个边框，分别定位在哪根网格线。
 
@@ -582,7 +582,7 @@ place-content: space-around space-evenly;
 
 使用这四个属性，如果产生了项目的重叠，则使用**z-index**属性指定项目的重叠顺序。
 
-#### 4.2 grid-column、grid-row 属性
+### 4.2 grid-column、grid-row 属性
 
 **grid-column**属性是**grid-column-start**和**grid-column-end**的合并简写形式，**grid-row**属性是**grid-row-start**属性和**grid-row-end**的合并简写形式。
 
@@ -641,7 +641,7 @@ place-content: space-around space-evenly;
 
 上面代码中，项目**item-1**占据左上角第一个网格。
 
-#### 4.3 grid-area 属性
+### 4.3 grid-area 属性
 
 **grid-area**属性指定项目放在哪一个区域。
 
@@ -671,7 +671,7 @@ place-content: space-around space-evenly;
 }
 ```
 
-#### 4.4 justify-self、align-self、place-self 属性
+### 4.4 justify-self、align-self、place-self 属性
 
 **justify-self**属性设置单元格内容的水平位置（左中右），跟**justify-items**属性的用法完全一致，但只作用于单个项目。
 
