--- a/_posts/2019-11-26-it-words.md
+++ b/_posts/2019-11-26-it-words.md
@@ -7,14 +7,14 @@ tags: 软件开发
 ---
 本文简要介绍软件开发中的相关词语。
 
-### Daemon
+## Daemon
 守护进程
-### IaaS
+## IaaS
 Infrastructure as a Service
 基础设施即服务
-### PaaS
+## PaaS
 platform as a service
 平台即服务
-### SaaS
+## SaaS
 Software as a Service
 软件即服务
