--- a/_posts/2019-11-30-docker.md
+++ b/_posts/2019-11-30-docker.md
@@ -134,7 +134,7 @@ $ docker run -i -t ubuntu /bin/bash
 $ docker container ls
 
 # 列出本机所有容器，包括终止运行的容器
-$ docker container ls --all
+$ docker container ls -a
 
 # 手动终止那些不会自动终止的容器
 $ docker container kill [containID]
